smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-list-member-names.errors
[ERROR] -: Parse error at line 7, column 5 near `member`: Expected: '}', but found 'm' | Model
