smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-list-member-names.smithy
$version: "2.0"

namespace com.foo

list List {
    member: String,
    member: String
}
